--- a/index.html
+++ b/index.html
@@ -29,26 +29,42 @@
             <ul>
                 <li><a href="#INLEIDING">Inleiding</a></li>
                 <li>
-                    <a href="#1">Hoe gaat het compositie proces van bekende film componisten?</a>
+                    <a href="">Hoe kan je met filmmuziek een scene anders laten voelen?</a>
                     <ul>
-                        <li><a href="#1a">Hoe gaan componisten van start met het schrijven van filmmuziek?</a></li>
-                        <li><a href="#1b">Welke technologie wordt gebruikt tijdens het compositie proces voor film
-                                muziek?</a></li>
-                        <li><a href="#1c">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van
-                                filmmuziek?</a></li>
+                        <li>
+                            <a href="">Hoe beïnvloeden de muzikale elementen de emotionele ervaring van een
+                                filmscène?</a>
+                            <ul>
+                                <li><a href="">Toonsoort, toonhoogte en harmonie</a></li>
+                                <li><a href="">Tempo en toonduur</a></li>
+                                <li><a href="">Timbre</a></li>
+                                <li><a href="">Toonsterkte en dynamiek</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="">Hoe beïnvloedt het gebruik van stilte een filmscène?</a></li>
+                        <li><a href="">Hoe kunnen de muzkale elementen gecombineerd worden om een filmscène anders te
+                                laten voelen?</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#2">Hoe kan je met filmmuziek een scene anders laten voelen?</a>
+                    <a href="">Hoe ging mijn proces voor het schrijven van de muziek voor mijn profiel werkstuk?</a>
                     <ul>
-                        <li><a href="">Hoe beinvloed de toonsoort en toonhoogte een filmscene?</a></li>
-                        <li><a href="">Hoe beinvloed het tempo een filmscene?</a></li>
-                        <li><a href="">Hoe beinvloed timbre een filmscene?</a></li>
-                        <li><a href="">Hoe beinvloed toonsterkte en dynamiek een filmscene??</a></li>
-                        <li><a href="">Hoe beinvloed het gebruik van stilte een filmscene?</a></li>
-                        <li><a href="">Hoe kan je deze muzikale begrippen samen gebruiken om een film scene anders te laten voelen?</a></li>
+                        <li><a href="">Hoe ben ik van start gegaan bij het schrijven van de filmmziek? </a></li> 
+                        <li><a href="">Welke technologie heb ik gebruikt voor het schrijven van de filmmuziek?</a></li>
+                        <li><a href="">Welke obstakels ben ik tegen gekomen tijdens het schrijven van de filmmuziek?</a></li>
                     </ul>
                 </li>
+                
+                <!-- <li>
+                    <a href="">Hoe gaat het compositie proces van bekende film componisten?</a>
+                    <ul>
+                        <li><a href="">Hoe gaan componisten van start met het schrijven van filmmuziek?</a></li>
+                        <li><a href="">Welke technologie wordt gebruikt tijdens het compositie proces voor film
+                                muziek?</a></li>
+                        <li><a href="">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van
+                                filmmuziek?</a></li>
+                    </ul>
+                </li> -->
                 <li><a href="#CONCLUSIE">Conclusie</a></li>
                 <li><a href="#MUZIEK">Muziek</a></li>
                 <li><a href="#BRONNEN">Bronnen</a></li>
@@ -58,129 +74,150 @@
 
         <hr>
 
-        <h3 id="INLEIDING">Inleiding</h3>
-        <p>
-        </p>
+        <div>
+            <h3 id="INLEIDING">Inleiding</h3>
+            <p>
 
-        <hr>
-
-        <h3 id="CONCLUSIE">Conclusie</h3>
-        <p>
-        </p>
-
-        <hr>
-
-        <h3 id="BRONNEN">Bronnen</h3>
-        <p>
-            <span style="font-weight: bold;">Films:</span> <br>
-            <span style="font-style: italic;">
-                Dunkirk – Hanz Zimmer<br>
-                Dune – Hans Zimmer <br>
-                Halloween – John Carpenter <br>
-                The Shining – Wendy Carlos & Rachel Elkind <br>
-                Tenet – Ludwig Goransson <br>
-                Oppenheimer – Ludwig Goransson <br>
-                La la land – Justin Hurwitz <br>
-                Schindler’s List – John Williams <br>
-                Lord of the Rings – Howard Shore <br>
-                The Thing – Ennio Morricone <br>
-                Once Upon a Time in the West – Ennio Morricone <br>
-                Amélie – Yann Tiersen <br>
-            </span>
-        </p>
-
-        <p style="font-style: italic;">
-            <a href="https://www.youtube.com/watch?v=La6R97pahR8" target="_blank">
-                Native Instruments. (2021, April 13). Alan Silvestri Breaks Down the Composing Workflow Behind his
-                Blockbuster Scores | Native Instruments [Video]. YouTube.
-            </a>
-            <br>
-            <br>
-            <a href="" target="_blank">
-                Lord of the Rings Extended edition. (2001, December 19). Lord of the Rings behind the scenes
-            </a>
-            <br>
-            <br>
-            <a href="https://www.youtube.com/watch?v=sj2PdzPzyYY" target="_blank">
-                Mix with the Masters. (2020, July 17). Writing to picture with Hans Zimmer [Video]. YouTube.
-            </a>
-            <br>
-            <br>
-            <a href="https://www.youtube.com/watch?v=Ib4BHU0J-dA" target="_blank">
-                Collider Interviews. (2023, July 28). OppenheimerInterview: Composer Ludwig Göransson [Video]. YouTube.
-            </a>
-            <br>
-            <br>
-            <a href="https://www.youtube.com/watch?v=GW53-eaDz8M" target="_blank">
-                Pitchfork. (2021, April 13). Mandalorian composer Ludwig Göransson breaks down his movie & TV scores |
-                Critical breakthroughs [Video]. YouTube.
-            </a>
-            <br>
-            <br>
-            <a href="https://www.youtube.com/watch?v=aQIcZbzr9Wk" target="_blank">
-                Variety. (2020, August 13). How “The Mandalorian” Score Found The New “Star Wars” Sound [Video].
-                YouTube.
-            </a>
-            <br>
-            <br>
-            <a href="https://www.youtube.com/watch?v=93A1ryc-WW0" target="_blank">
-                Vanity Fair. (2022, March 17). How “Dune” composer Hans Zimmer created the Oscar-Winning score | Vanity
-                Fair[Video]. YouTube.
-            </a>
-            <br>
-        </p>
-
-        <hr>
-
-        <h3 id="MUZIEK">Muziek</h3>
-        <p>
-        <div class="audio_bijlage">
-            <audio controls src=""></audio>
-            <div>Muziekfragment<span style="font-style: italic;"></span></div>
+            </p>
         </div>
-        <br>
-        <div class="audio_bijlage">
-            <audio controls src=""></audio>
-            <div>Muziekfragment<span style="font-style: italic;"></span></div>
+
+        <hr>
+
+        <div>
+            <h3 id="CONCLUSIE">Conclusie</h3>
+            <p>
+            </p>
         </div>
-        </p>
 
         <hr>
 
-        <h3 id="LOGBOEK">Logboek</h3>
-        <p>
-            <span style="font-weight: bold;">Week 36:</span> 2 uur orienteren met Vincent <br>
-            <span style="font-weight: bold;">Week 36:</span> 1 uur orientatie opdracht maken<br>
-            <span style="font-weight: bold;">Week 36:</span> 30 minuten gesprek met toa met zwarte baard <br>
-            <span style="font-weight: bold;">Week 38:</span> 30 minuten gesprek met Martijn breebaart <br>
-            <span style="font-weight: bold;">Week 39:</span> 30 minuten gesprek met Desiree Ceulemans <br>
-            <span style="font-weight: bold;">Week 39:</span> 2 uur werken aan plan van aanpak <br>
-            <span style="font-weight: bold;">Week 39:</span> 1 uur bronnen zoeken, bekijken en lezen <br>
-            <span style="font-weight: bold;">Week 39:</span> 2 uur ideeën bedenken op de piano<br>
-            <span style="font-weight: bold;">Week 39:</span> 1 uur website maken voor PWS<br>
-            <span style="font-weight: bold;">Week 40:</span> 1 uur website maken voor PWS<br>
-            <span style="font-weight: bold;">Week 40:</span> 30 minuten gesprek met Desiree Ceulemans<br>
-            <span style="font-weight: bold;">Week 40:</span> 1 uur deelonderwerpen aanpassen<br>
-        </p>
+        <div>
+            <h3 id="BRONNEN">Bronnen</h3>
+            <p>
+                <span style="font-weight: bold;">Films:</span> <br>
+                <span style="font-style: italic;">
+                    Dunkirk – Hanz Zimmer<br>
+                    Dune – Hans Zimmer <br>
+                    Halloween – John Carpenter <br>
+                    Blade Runner – Vangelis
+                    The Shining – Wendy Carlos & Rachel Elkind <br>
+                    Tenet – Ludwig Goransson <br>
+                    Oppenheimer – Ludwig Goransson <br>
+                    La la land – Justin Hurwitz <br>
+                    Schindler’s List – John Williams <br>
+                    Lord of the Rings – Howard Shore <br>
+                    The Thing – Ennio Morricone <br>
+                    Once Upon a Time in the West – Ennio Morricone <br>
+                    Amélie – Yann Tiersen <br>
+                </span>
+            </p>
+
+            <p style="font-style: italic;">
+                <a href="https://www.youtube.com/watch?v=La6R97pahR8" target="_blank">
+                    Native Instruments. (2021, April 13). Alan Silvestri Breaks Down the Composing Workflow Behind his
+                    Blockbuster Scores | Native Instruments [Video]. YouTube.
+                </a>
+                <br>
+                <br>
+                <a href="" target="_blank">
+                    Lord of the Rings Extended edition. (2001, December 19). Lord of the Rings behind the scenes
+                </a>
+                <br>
+                <br>
+                <a href="https://www.youtube.com/watch?v=sj2PdzPzyYY" target="_blank">
+                    Mix with the Masters. (2020, July 17). Writing to picture with Hans Zimmer [Video]. YouTube.
+                </a>
+                <br>
+                <br>
+                <a href="https://www.youtube.com/watch?v=Ib4BHU0J-dA" target="_blank">
+                    Collider Interviews. (2023, July 28). OppenheimerInterview: Composer Ludwig Göransson [Video].
+                    YouTube.
+                </a>
+                <br>
+                <br>
+                <a href="https://www.youtube.com/watch?v=GW53-eaDz8M" target="_blank">
+                    Pitchfork. (2021, April 13). Mandalorian composer Ludwig Göransson breaks down his movie & TV scores
+                    | Critical breakthroughs [Video]. YouTube.
+                </a>
+                <br>
+                <br>
+                <a href="https://www.youtube.com/watch?v=aQIcZbzr9Wk" target="_blank">
+                    Variety. (2020, August 13). How “The Mandalorian” Score Found The New “Star Wars” Sound [Video].
+                    YouTube.
+                </a>
+                <br>
+                <br>
+                <a href="https://www.youtube.com/watch?v=93A1ryc-WW0" target="_blank">
+                    Vanity Fair. (2022, March 17). How “Dune” composer Hans Zimmer created the Oscar-Winning score |
+                    Vanity Fair [Video]. YouTube.
+                </a>
+                <br>
+            </p>
+        </div>
 
         <hr>
 
-        <h3 id="PLANNING">Planning</h3>
-        <p>
-            <span style="font-weight: bold;">Week 42:</span> <br>
-            <span style="font-weight: bold;">Week 43:</span> Filmmuziek emotie deelvragen <br>
-            <span style="font-weight: bold;">Week 44:</span> Filmmuziek emotie deelvragen <br>
-            <span style="font-weight: bold;">Week 45:</span> Filmmuziek emotie deelvragen <br>
-            <span style="font-weight: bold;">Week 46:</span> Filmmuziek emotie deelvragen <br>
-            <span style="font-weight: bold;">Week 47:</span> Starten met compositie en die deelvragen beantwoorden <br>
-            <span style="font-weight: bold;">Week 48:</span> <br>
-            <span style="font-weight: bold;">Week 49:</span> Onderzoek Afronden <br>
-            <span style="font-weight: bold;">Week 50:</span> Producten Maken <br>
-            <span style="font-weight: bold;">Week 51:</span> Producten Maken <br>
-            <span style="font-weight: bold;">Week 52:</span> Product(en) afronden <br>
-            <span style="font-weight: bold;">Week 01:</span> Laatste dingetjes doen<br>
-            <span style="font-weight: bold;">Week 02:</span> Inleveren PWS <br>
-        </p>
+        <div>
+            <h3 id="MUZIEK">Muziek</h3>
+            <p>
+            <div class="audio_bijlage">
+                <audio controls src=""></audio>
+                <div>Muziekfragment</div>
+            </div>
+            <br>
+            <div class="audio_bijlage">
+                <audio controls src=""></audio>
+                <div>Muziekfragment</div>
+            </div>
+            </p>
+
+            <div class="video_bijlage">
+                <video controls src=""></video>
+                <div>video fragment</div>
+            </div>
+
+        </div>
+
+        <hr>
+
+        <div>
+            <h3 id="LOGBOEK">Logboek</h3>
+            <p>
+                <span style="font-weight: bold;">Week 36:</span> 2 uur orienteren met Vincent <br>
+                <span style="font-weight: bold;">Week 36:</span> 1 uur orientatie opdracht maken<br>
+                <span style="font-weight: bold;">Week 36:</span> 30 minuten gesprek met toa met zwarte baard <br>
+                <span style="font-weight: bold;">Week 38:</span> 30 minuten gesprek met Martijn breebaart <br>
+                <span style="font-weight: bold;">Week 39:</span> 30 minuten gesprek met Desiree Ceulemans <br>
+                <span style="font-weight: bold;">Week 39:</span> 2 uur werken aan plan van aanpak <br>
+                <span style="font-weight: bold;">Week 39:</span> 1 uur bronnen zoeken, bekijken en lezen <br>
+                <span style="font-weight: bold;">Week 39:</span> 2 uur ideeën bedenken op de piano<br>
+                <span style="font-weight: bold;">Week 39:</span> 1 uur website maken voor PWS<br>
+                <span style="font-weight: bold;">Week 40:</span> 1 uur website maken voor PWS<br>
+                <span style="font-weight: bold;">Week 40:</span> 30 minuten gesprek met Desiree Ceulemans<br>
+                <span style="font-weight: bold;">Week 40:</span> 1 uur deelonderwerpen aanpassen<br>
+            </p>
+        </div>
+
+        <hr>
+
+        <div>
+            <h3 id="PLANNING">Planning</h3>
+            <p>
+                <span style="font-weight: bold;">Week 42:</span> Inleiding schrijven <br>
+                <span style="font-weight: bold;">Week 43:</span> Filmmuziek emotie deelvragen <br>
+                <span style="font-weight: bold;">Week 44:</span> Filmmuziek emotie deelvragen <br>
+                <span style="font-weight: bold;">Week 45:</span> Filmmuziek emotie deelvragen <br>
+                <span style="font-weight: bold;">Week 46:</span> Filmmuziek emotie deelvragen <br>
+                <span style="font-weight: bold;">Week 47:</span> Filmmuziek emotie deelvragen <br>
+                <span style="font-weight: bold;">Week 48:</span> Onderzoek Afronden<br>
+                <span style="font-weight: bold;">Week 49:</span> Product(en) Maken <br>
+                <span style="font-weight: bold;">Week 50:</span> Product(en) Maken <br>
+                <span style="font-weight: bold;">Week 51:</span> Product(en) Maken <br>
+                <span style="font-weight: bold;">Week 52:</span> Product(en) afronden <br>
+                <span style="font-weight: bold;">Week 01:</span> Laatste dingetjes doen<br>
+                <span style="font-weight: bold;">Week 02:</span> Inleveren PWS <br>
+            </p>
+        </div>
 
         <hr>
 
