--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     Dunkirk – Hanz Zimmer<br>
                     Dune – Hans Zimmer <br>
                     Halloween – John Carpenter <br>
-                    Blade Runner – Vangelis
+                    Blade Runner – Vangelis <br>
                     The Shining – Wendy Carlos & Rachel Elkind <br>
                     Tenet – Ludwig Goransson <br>
                     Oppenheimer – Ludwig Goransson <br>
@@ -195,6 +195,8 @@
                 <span style="font-weight: bold;">Week 40:</span> 1 uur website maken voor PWS<br>
                 <span style="font-weight: bold;">Week 40:</span> 30 minuten gesprek met Desiree Ceulemans<br>
                 <span style="font-weight: bold;">Week 40:</span> 1 uur deelonderwerpen aanpassen<br>
+                <span style="font-weight: bold;">Week 40:</span> 1 uur deelonderwerpen aanpassen<br>
+                <span style="font-weight: bold;">Week 41:</span> 1 uur deelonderwerpen aanpassen<br>
             </p>
         </div>
 
