--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                                 <li><a href="">Toonsterkte en dynamiek</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Hoe beïnvloedt het gebruik van stilte een filmscène?</a></li>
                         <li><a href="">Hoe kunnen de muzkale elementen gecombineerd worden om een filmscène anders te
                                 laten voelen?</a></li>
                     </ul>
@@ -49,12 +48,13 @@
                 <li>
                     <a href="">Hoe ging mijn proces voor het schrijven van de muziek voor mijn profiel werkstuk?</a>
                     <ul>
-                        <li><a href="">Hoe ben ik van start gegaan bij het schrijven van de filmmziek? </a></li> 
+                        <li><a href="">Hoe ben ik van start gegaan bij het schrijven van de filmmziek? </a></li>
                         <li><a href="">Welke technologie heb ik gebruikt voor het schrijven van de filmmuziek?</a></li>
-                        <li><a href="">Welke obstakels ben ik tegen gekomen tijdens het schrijven van de filmmuziek?</a></li>
+                        <li><a href="">Welke obstakels ben ik tegen gekomen tijdens het schrijven van de filmmuziek?</a>
+                        </li>
                     </ul>
                 </li>
-                
+
                 <!-- <li>
                     <a href="">Hoe gaat het compositie proces van bekende film componisten?</a>
                     <ul>
@@ -87,6 +87,28 @@
             <h3 id="CONCLUSIE">Conclusie</h3>
             <p>
             </p>
+        </div>
+
+        <hr>
+
+        <div>
+            <h3 id="MUZIEK">Muziek</h3>
+            <p>
+            <div class="audio_bijlage">
+                <audio controls src=""></audio>
+                <div>Muziekfragment</div>
+            </div>
+            <br>
+            <div class="audio_bijlage">
+                <audio controls src=""></audio>
+                <div>Muziekfragment</div>
+            </div>
+            </p>
+
+            <div class="video_bijlage">
+                <video controls src=""></video>
+                <div>video fragment</div>
+            </div>
         </div>
 
         <hr>
@@ -158,46 +180,52 @@
         <hr>
 
         <div>
-            <h3 id="MUZIEK">Muziek</h3>
-            <p>
-            <div class="audio_bijlage">
-                <audio controls src=""></audio>
-                <div>Muziekfragment</div>
-            </div>
-            <br>
-            <div class="audio_bijlage">
-                <audio controls src=""></audio>
-                <div>Muziekfragment</div>
-            </div>
-            </p>
-
-            <div class="video_bijlage">
-                <video controls src=""></video>
-                <div>video fragment</div>
-            </div>
-
-        </div>
-
-        <hr>
-
-        <div>
             <h3 id="LOGBOEK">Logboek</h3>
             <p>
-                <span style="font-weight: bold;">Week 36:</span> 2 uur orienteren met Vincent <br>
-                <span style="font-weight: bold;">Week 36:</span> 1 uur orientatie opdracht maken<br>
-                <span style="font-weight: bold;">Week 36:</span> 30 minuten gesprek met toa met zwarte baard <br>
-                <span style="font-weight: bold;">Week 38:</span> 30 minuten gesprek met Martijn breebaart <br>
-                <span style="font-weight: bold;">Week 39:</span> 30 minuten gesprek met Desiree Ceulemans <br>
-                <span style="font-weight: bold;">Week 39:</span> 2 uur werken aan plan van aanpak <br>
-                <span style="font-weight: bold;">Week 39:</span> 1 uur bronnen zoeken, bekijken en lezen <br>
-                <span style="font-weight: bold;">Week 39:</span> 2 uur ideeën bedenken op de piano<br>
-                <span style="font-weight: bold;">Week 39:</span> 1 uur website maken voor PWS<br>
-                <span style="font-weight: bold;">Week 40:</span> 1 uur website maken voor PWS<br>
-                <span style="font-weight: bold;">Week 40:</span> 30 minuten gesprek met Desiree Ceulemans<br>
-                <span style="font-weight: bold;">Week 40:</span> 1 uur deelonderwerpen aanpassen<br>
-                <span style="font-weight: bold;">Week 40:</span> 1 uur deelonderwerpen aanpassen<br>
-                <span style="font-weight: bold;">Week 41:</span> 1 uur deelonderwerpen aanpassen<br>
+                <span style="font-weight: bold;">Week 36:</span> <br> 
+                2 uur georienteerd met Vincent voor een onderwerp. <br>
+                30 minuten gesprek gehad met toa met zwarte baard.
             </p>
+            <p>
+                <span style="font-weight: bold;">Week 37:</span> <br> 
+                Deze week heb ik geprobeerd te regelen om mijn profielwerkstuk zelfstandig te kunnen maken met een muziek onderwerp.
+            </p>
+            <p>
+                <span style="font-weight: bold;">Week 38:</span> <br>
+                30 minuten gesproken samen met Vincent en Martijn breebaart over hoe wij verder zullen gaan. 
+                Hierna ben ik ik zelfstandig aan mijn eigen onderwerp begonnen en is Vincent gestart met leenderdt
+            </p>
+            <p>
+                <span style="font-weight: bold;">Week 39:</span> <br>
+                30 minuten gesproken met Desiree Ceulemans. <br>
+                3 uur gewerkt aan het plan van aanpak. <br>
+                1 uur bronnen gezocht, bekeken en gelezen. <br>
+                2 uur ideeën op de piano gespeeld voor ideeën. <br> 
+                1 uur aan website gewerkt.
+            </p>
+            <p>
+                <span style="font-weight: bold;">Week 40:</span> <br>
+                2 uur aan website gewerkt.
+                30 minuten gesproken met Desiree Ceulemans.<br>
+                2 uur gewerkt aan het aan aanpassen van mijn deelonderwerpen en ze kleiner gemaakt.
+            </p>
+            <p>
+                <span style="font-weight: bold;">Week 41:</span> <br> 
+                 1 uur gewerkt aan mijn deelonderwerpen. 
+            </p>
+            <p>
+                <span style="font-weight: bold;">Week 42:</span> <br> 
+                Geen tijd gehad voor het profielwerkstuk. Deze week was het toetsweek :(
+            </p>
+            <p>
+                <span style="font-weight: bold;">Week 43:</span> <br> 
+                De hele week ziek :(
+            </p>
+            <p>
+                <span style="font-weight: bold;">Totaal: </span> 18 uur besteed aan mijn profielwerkstuk<br>
+            </p>
+            
+
         </div>
 
         <hr>
@@ -205,16 +233,14 @@
         <div>
             <h3 id="PLANNING">Planning</h3>
             <p>
-                <span style="font-weight: bold;">Week 42:</span> Inleiding schrijven <br>
-                <span style="font-weight: bold;">Week 43:</span> Filmmuziek emotie deelvragen <br>
-                <span style="font-weight: bold;">Week 44:</span> Filmmuziek emotie deelvragen <br>
-                <span style="font-weight: bold;">Week 45:</span> Filmmuziek emotie deelvragen <br>
-                <span style="font-weight: bold;">Week 46:</span> Filmmuziek emotie deelvragen <br>
-                <span style="font-weight: bold;">Week 47:</span> Filmmuziek emotie deelvragen <br>
-                <span style="font-weight: bold;">Week 48:</span> Onderzoek Afronden<br>
+                <span style="font-weight: bold;">Week 44:</span> Onderzoek doen en schrijven <br>
+                <span style="font-weight: bold;">Week 45:</span> Onderzoek doen en schrijven <br>
+                <span style="font-weight: bold;">Week 46:</span> Onderzoek doen en schrijven <br>
+                <span style="font-weight: bold;">Week 47:</span> Onderzoek doen en schrijven <br>
+                <span style="font-weight: bold;">Week 48:</span> Onderzoek doen en schrijven <br>
                 <span style="font-weight: bold;">Week 49:</span> Product(en) Maken <br>
                 <span style="font-weight: bold;">Week 50:</span> Product(en) Maken <br>
-                <span style="font-weight: bold;">Week 51:</span> Product(en) Maken <br>
+                <span style="font-weight: bold;">Week 51:</span> Topweek <br>
                 <span style="font-weight: bold;">Week 52:</span> Product(en) afronden <br>
                 <span style="font-weight: bold;">Week 01:</span> Laatste dingetjes doen<br>
                 <span style="font-weight: bold;">Week 02:</span> Inleveren PWS <br>
