--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
             </div>
 
             <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, dicta neque! Quas voluptatem veniam vero, eos quibusdam qui ex voluptate voluptatum excepturi! Quo expedita eius odio officia, sed doloribus laborum!
+            </p>
+
+            <div class="video_bijlage">
+                <video controls src=""></video>
+                <div>Scene uit ??? met het eigen compositie</div>
+            </div>
+
+            <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ab voluptatibus quam et aspernatur vitae mollitia ratione modi doloribus maiores repellendus quod voluptates id, architecto, quis nihil repellat quas sit.
                 Lorem, ipsum dolor sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia eius obcaecati neque ratione ipsum quo quaerat deserunt consequuntur, repellat tempora alias, asperiores veritatis facere culpa. Explicabo repellat sed assumenda labore? consectetur adipisicing elit. Quo accusamus voluptas deserunt quia magnam a dignissimos amet tempore ipsa odio obcaecati sed eos, maiores dolorem asperiores repellat omnis esse nam.
             </p>
