--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </p>
 
             <div class="bijlage">
-                <iframe src="https://www.youtube.com/embed/AIYiW0rVkK8?si=aKq7e5z-JVkUwL_i?modestbranding=1&rel=0&color=white&autohide=1&showinfo=0" title="YouTube video player"frameborder="0"allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"allowfullscreen></iframe>
+                <video src="Media/Film/Chariots of Fire (1981) Maj.mov" preload="none" controls></video>
                 <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in majeur
                     (origineel nagemaakt)</div>
             </div>
