--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                             <a href="#1a">Hoe beïnvloeden diverse muzikale elementen de emotionele ervaring van een
                                 filmscène?</a>
                             <ul>
-                                <li><a href="#1aa">Toonsoort</a></li>
-                                <li><a href="#1ab">Timbre</a></li>
+                                <li><a href="#1aa">Timbre</a></li>
+                                <li><a href="#1ab">Toonsoort</a></li>
                                 <li><a href="#1ac">Tempo</a></li>
                                 <li><a href="#1ad">Toonsterkte</a></li>
                             </ul>
@@ -76,6 +76,16 @@
         <div>
             <h3 id="1a">Hoe beïnvloeden diverse muzikale elementen de emotionele ervaring van een filmscène?</h3>
 
+            <h4>Timbre</h4>
+            <div class="bijlage">
+                <video src="" preload="none" controls></video>
+                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie gemaakt met klassieke instrumenten</div>
+            </div>
+            <div class="bijlage">
+                <video src="" preload="none" controls></video>
+                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie gemaakt met moderne synthesizers</div>
+            </div>
+            
             <h4 id="1aa">Toonsoort</h4>
 
             <div class="bijlage">
@@ -101,16 +111,6 @@
                 <video src="" preload="none" controls></video>
                 <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) zonder
                     toonsoort</div>
-            </div>
-
-            <h4>Timbre</h4>
-            <div class="bijlage">
-                <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie gemaakt met klassieke instrumenten</div>
-            </div>
-            <div class="bijlage">
-                <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie gemaakt met moderne synthesizers</div>
             </div>
 
             <h4>Tempo</h4>
@@ -285,6 +285,7 @@
                 1 uur film scenes uitgezocht <br>
                 1 uur atonale versie gemaakt voor chariots of fire <br>
                 1 uur aan de opmaak van de site
+                2 uur gecomponeerd
             </p>
             <p>
                 <b>Totaal: </b> ?? uur besteed aan mijn profielwerkstuk<br>
