--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2 style="font-size: 3em;">Liam Creed</h2>
         <h2 style="font-size: 1.5em;">6VWO ECL Januari 2024</h2>
         <hr>
-        <h2>Hoe kan je met filmmuziek een filmscène anders laten voelen?</h2>
+        <h2>Welk muzikaal </h2>
         <hr>
         <img src="Media/Afbeeldingen/howardshore.jpg" alt="">
         <hr>
@@ -27,32 +27,35 @@
             <ul>
                 <li><a href="#INLEIDING">Inleiding</a></li>
                 <li>
-                    <a href="#1">Hoe kan je met filmmuziek een filmscène anders laten voelen?</a>
+                    <a href="#1">Welk muzikaal aspect beinvloed een film scene het meeste?</a>
                     <ul>
-                        <li>
-                            <a href="#1a">Hoe beïnvloeden diverse muzikale elementen de emotionele ervaring van een
-                                filmscène?</a>
-                            <ul>
-                                <li><a href="#1aa">Timbre</a></li>
-                                <li><a href="#1ab">Toonsoort</a></li>
-                                <li><a href="#1ac">Tempo</a></li>
-                                <li><a href="#1ad">Toonsterkte</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#1b">Hoe kunnen deze muzkale elementen gecombineerd worden om een filmscène anders
-                                te
-                                laten voelen?</a></li>
+                        <li><a href="">Hypothese</a></li>
+                        <li><a href="">Onderzoek</a></li>
+                        <ul>
+                            <li><a href="#1a">Timbre</a></li>
+                            <li><a href="#1b">Toonsoort</a></li>
+                            <li><a href="#1c">Toonhoogte</a></li>
+                            <li><a href="#1d">Harmonie</a></li>
+                            <li><a href="#1e">Tempo</a></li>
+                            <li><a href="#1f">Volume</a></li>
+                        </ul>
+                        <li><a href="#1f">Conclusie</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#2">Hoe ging mijn proces voor het schrijven van de muziek voor mijn profiel werkstuk?</a>
                     <ul>
+                        <li><a href="">Muziekstukken Toonsoort</a></li>
+                        <li><a href="">Muziekstukken Timbre</a></li>
+                        <li><a href="">Muziekstukken Toonhoogte</a></li>
+                        <li><a href="">Muziekstukken Harmonie</a></li>
+                        <li><a href="">Muziekstukken Tempo</a></li>
+                        <li><a href="">Muziekstukken Volume</a></li>
+
+                        <!-- 
                         <li><a href="#2a">Hoe ben ik van start gegaan bij het schrijven van de filmmziek? </a></li>
-                        <li><a href="#2b">Welke technologie heb ik gebruikt voor het schrijven van de filmmuziek?</a>
-                        </li>
-                        <li><a href="#2c">Welke obstakels ben ik tegen gekomen tijdens het schrijven van de
-                                filmmuziek?</a>
-                        </li>
+                        <li><a href="#2b">Welke technologie heb ik gebruikt voor het schrijven van de filmmuziek?</a></li>
+                        <li><a href="#2c">Welke obstakels ben ik tegen gekomen tijdens het schrijven van de filmmuziek?</a></li> -->
                     </ul>
                 </li>
                 <li><a href="#Bijlagen">Bijlagen</a></li>
@@ -69,24 +72,34 @@
 
         <div id="2">
             <hr>
-            <h2 id="1">Hoe kan je met filmmuziek een filmscene anders laten voelen?</h2>
+            <h2 id="1">Welke muzikaal aspect beinvloed een film scene het meeste?</h2>
             <hr>
         </div>
 
         <div>
-            <h3 id="1a">Hoe beïnvloeden diverse muzikale elementen de emotionele ervaring van een filmscène?</h3>
+            <p>
+               <!--  Onderzoek -->
+            </p>
+        </div>
 
-            <h4>Timbre</h4>
+        <hr>
+
+        <div>
+            <h3>Timbre</h3>
             <div class="bijlage">
                 <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie gemaakt met klassieke instrumenten</div>
+                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie
+                    gemaakt met klassieke instrumenten</div>
             </div>
             <div class="bijlage">
                 <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie gemaakt met moderne synthesizers</div>
+                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie
+                    gemaakt met moderne synthesizers</div>
             </div>
-            
-            <h4 id="1aa">Toonsoort</h4>
+
+            <hr>
+
+            <h3>Toonsoort</h3>
 
             <div class="bijlage">
                 <audio controls src="Media/Muziek/Halloween Thema.mp3"></audio>
@@ -113,7 +126,9 @@
                     toonsoort</div>
             </div>
 
-            <h4>Tempo</h4>
+            <hr>
+
+            <h3>Tempo</h3>
             <div class="bijlage">
                 <video src="" preload="none" controls></video>
                 <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
@@ -123,22 +138,21 @@
                 <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
             </div>
 
-            <h4>Toonsterkte</h4>
-            <div class="bijlage">
-                <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
-            </div>
-            <div class="bijlage">
-                <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
-            </div>
-        
-            <h3>Hoe kunnen deze muzkale elementen gecombineerd worden om een filmscène anders te laten voelen?</h3>
+            <hr>
 
+            <h3>Toonsterkte</h3>
             <div class="bijlage">
                 <video src="" preload="none" controls></video>
-                <div>Scene uit <a href="" target="_blank">?????</a></div>
+                <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
             </div>
+            <div class="bijlage">
+                <video src="" preload="none" controls></video>
+                <div>Scene uit <a href="" target="_blank">Secret life of walter mitty (2013)</a></div>
+            </div>
+
+            <hr>
+
+            <h3>Conclusie</h3>
         </div>
 
         <hr>
@@ -181,8 +195,9 @@
                 <br>
                 <br>
                 <a href="https://www.youtube.com/watch?v=S6_FtQlpsY0" target="_blank">
-                    Kinolibrary. (2022, May 20). Vangelis Composing In His Studio, 2000s | Premium Footage [Video]. YouTube.
-                </a>   
+                    Kinolibrary. (2022, May 20). Vangelis Composing In His Studio, 2000s | Premium Footage [Video].
+                    YouTube.
+                </a>
                 <br>
                 <br>
                 <a href="" target="_blank">
@@ -284,8 +299,9 @@
                 <b>Week 45:</b> <br>
                 1 uur film scenes uitgezocht <br>
                 1 uur atonale versie gemaakt voor chariots of fire <br>
-                1 uur aan de opmaak van de site
-                2 uur gecomponeerd
+                1 uur aan de opmaak van de site <br>
+                2 uur gecomponeerd <br>
+                30 minuten met Desiree Ceulemans gepraat <br>
             </p>
             <p>
                 <b>Totaal: </b> ?? uur besteed aan mijn profielwerkstuk<br>
@@ -301,10 +317,10 @@
 
             </p>
             <p>
-                <b>Week 45</b> Product Harmonie<br>
-                <b>Week 46</b> Product(en) Tempo <br>
-                <b>Week 47</b> Product(en) Dynamiek <br>
-                <b>Week 48</b> Product(en) Timbre <br>
+                <b>Week 45</b> Product 1 Timbre<br>
+                <b>Week 46</b> Product 2 timbre<br>
+                <b>Week 47</b> Product(en) Tempo <br>
+                <b>Week 48</b> Product(en) Dynamiek <br>
                 <b>Week 49</b> Product(en) Eind <br>
                 <b>Week 50</b> Product(en) Eind <br>
                 <b>Week 51</b> Topweek <br>
