--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2 style="font-size: 3em;">Liam Creed</h2>
         <h2 style="font-size: 1.5em;">6VWO ECL Januari 2024</h2>
         <hr>
-        <h2>Welk muzikaal </h2>
+        <h2>Welk muzikaal aspect beinvloed een film scene het meeste?</h2>
         <hr>
         <img src="Media/Afbeeldingen/howardshore.jpg" alt="">
         <hr>
